[project]
name = "streammachine"
version = "0.1.0"
description = "High-performance async stream processing with Redis Streams"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "StreamMachine Team"}
]
keywords = ["streaming", "redis", "async", "event-driven", "data-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "coredis>=4.0.0",
    "uvloop>=0.17.0",
    "venusian>=3.0.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "redis>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.0.260",
    "pre-commit>=3.0.0",
]
cython = [
    "cython>=3.0.0",
]
fast-json = [
    "ujson>=5.0.0",
    "orjson>=3.9.0",
]
monitoring = [
    "structlog>=23.0.0",
    "prometheus-client>=0.17.0",
]
all = [
    "streammachine[dev,cython,fast-json,monitoring]",
]

# [project.scripts]
# streammachine = "streammachine.cli:main"

[project.urls]
Homepage = "https://github.com/anthropics/streammachine"
Documentation = "https://github.com/anthropics/streammachine#readme"
Repository = "https://github.com/anthropics/streammachine"
Issues = "https://github.com/anthropics/streammachine/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["streammachine*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
streammachine = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function call in default argument
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "coredis.*",
    "venusian.*",
    "uvloop.*",
    "pandas.*",
    "numpy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests requiring Redis server",
]

[tool.coverage.run]
source = ["streammachine"]
branch = true
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]